# sd35_task_aware_vae

./: .gitignore  IMPLEMENTATION_NOTES.md  README.md  pyproject.toml  requirements.txt
configs/eval/: sd35l_restore_eval_official_vae.yaml  sd35m_generate_aug_official_vae.yaml  sd35m_generate_aug_trained_full_a100_single.yaml  sd35m_generate_aug_trained_full_a100x8_main.yaml  sd35m_generate_aug_trained_lora_a100_single.yaml  sd35m_generate_class_text2img_official_vae.yaml  sd35m_generate_neutral_count_trained_full_vae_off_dit_center_patch_only.yaml  sd35m_generate_neutral_count_trained_fullvae_base_dit_ft_a100x8_main.yaml  sd35m_generate_neutral_count_trained_fullvae_center_patch_only_dit_ft_a100x8_main.yaml  sd35m_generate_uncond_trained_full_a100x8_main_decoder_only_base.yaml  sd35m_generate_uncond_trained_full_a100x8_main_decoder_only_center_patch_only.yaml  sd35m_generate_uncond_trained_full_a100x8_main_decoder_only_weighted_recon_only.yaml  sd35m_generate_uncond_trained_full_a100x8_main_official_vae.yaml  sd35m_restore_eval_official_vae.yaml  sd35m_restore_eval_trained_full_a100x8_main.yaml
docs/: dit_finetune_with_custom_vae.md  generate_with_finetuned_sd3_and_vae.md  removed_legacy_configs.md  vae_bottleneck_experiments_v2.md  vae_ddp_and_latent_covariance_matching.md
scripts/: run_sd35m_dit_ft_with_custom_vae.sh  run_sd35m_generate_with_finetuned_sd3.sh  run_sd35m_vae_ft_ddp.sh
tests/: test_config_loading.py  test_dataset_schema.py  test_sd3_pipeline_smoke.py  test_sd3_prompts.py  test_sd3_scheduler_state.py  test_vae_swap_smoke.py  test_vae_weight_map.py
(+80 files in other folders)
